--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
+server.port=8085
 keycloak.auth-server-url=http://localhost:8180/auth
-keycloak.realm=springdemo
+keycloak.realm=demo
 keycloak.resource=product-app
 keycloak.public-client=true
+keycloak.cors=true
 
-keycloak.security-constraints[0].authRoles[0]=user
-keycloak.security-constraints[0].securityCollections[0].patterns[0]=/products/*
+
+keycloak.principal-attribute=preferred_username
+
+#keycloak.security-constraints[0].authRoles[0]=user
+#keycloak.security-constraints[0].securityCollections[0].patterns[0]=/products/*
